# bcpmm

./: .gitignore  Anchor.toml  README.md  create-codama-client.ts  keypair.json  package-lock.json  package.json  program-keypair.json  workflow.md
.github/workflows/: build-deploy-devnet.yml  mainnet.yml  test.yml
demo/: .env.example  .gitignore  README.md  index.html  next.config.js  package.json  tsconfig.json  vite.config.ts
demo/app/: layout.tsx  page.tsx  providers.tsx
demo/example-events/: buy-payload.json
demo/src/: admin-keypair.ts  app.tsx  constants.ts  ensure-central-state-ata.ts  ensure-central-state.ts  ensure-mint.ts  main.tsx  test-keypairs.ts  virtual-token-price.ts  wallet-provider.tsx  wallet-storage.ts
demo/src/components/: account-details.tsx  pool-details.tsx  (+2 more)
migrations/: deploy.ts
programs/cbmm/: Cargo.toml
programs/cbmm/src/: errors.rs  helpers.rs  lib.rs  state.rs
programs/cbmm/src/helpers/: math.rs  mod.rs  rate_limit.rs
programs/cbmm/src/instructions/: burn_virtual_token.rs  buy_virtual_token.rs  claim_admin_fees.rs  claim_creator_fees.rs  claim_platform_fees.rs  close_user_burn_allowance.rs  close_virtual_token_account.rs  create_pool.rs  initialize_central_state.rs  initialize_platform_config.rs  initialize_user_burn_allowance.rs  initialize_virtual_token_account.rs  mod.rs  sell_virtual_token.rs  update_platform_config.rs
programs/cbmm/src/test_utils/: mod.rs  test_runner.rs
programs/cbmm/src/tests/: integration_basic.rs  mod.rs
programs/cbmm/tests/: create_account.rs  integration_basic.rs
programs/cpmm_poc/: Cargo.toml
programs/cpmm_poc/src/: errors.rs  helpers.rs  lib.rs  processor.rs  state.rs
programs/cpmm_poc/src/instructions/: burn_virtual_token.rs  buy_virtual_token.rs  claim_admin_fees.rs  claim_creator_fees.rs  close_user_burn_allowance.rs  close_virtual_token_account.rs  create_pool.rs  initialize_central_state.rs  initialize_treasury.rs  initialize_user_burn_allowance.rs  initialize_virtual_token_account.rs  mod.rs  sell_virtual_token.rs  update_treasury_authority.rs
programs/cpmm_poc/src/test_utils/: compute_metrics.rs  mod.rs  test_runner.rs
sdk/rust-client/: programs.rs
tests/: cbmm.ts  cpmm-poc.ts
whitepaper/: main.tex  references.bib
(+98 files in other folders)
