[package]
name = "cbmm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cbmm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",    
]
test-helpers = [
    "litesvm",
    "litesvm-token",
    "solana-sdk",
    "solana-sdk-ids",
    "solana-transaction-error",
    "solana-instruction",
    "solana-address",
    "sha2",
] # Feature flag to enable test utilities for integration tests

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

# Optional test dependencies (enabled via test-helpers feature for integration tests)
litesvm = { version = "0.8.1", optional = true }
litesvm-token = { version = "0.8.1", optional = true }
solana-sdk = { version = "3.0.0", optional = true }
solana-sdk-ids = { version = "3.0.0", optional = true }
solana-transaction-error = { version = "3.0.0", optional = true }
solana-instruction = { version = "3.0.0", optional = true }
solana-address = { version = "1.0.0", optional = true }
sha2 = { version = "0.10.9", optional = true }

[dev-dependencies]
ctor = "0.2"
litesvm = "0.8.1"
litesvm-token = "0.8.1"
sha2 = "0.10.9"
solana-address = "1.0.0"
solana-instruction = "3.0.0"
solana-sdk = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-transaction-error = "3.0.0"
test-case = "3.3"

