[package]
name = "cpmm-poc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpmm_poc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",    
]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.3.0"

[dev-dependencies]
litesvm = "0.8.1"
litesvm-token = "0.8.1"
sha2 = "0.10.9"
solana-address = "1.0.0"
solana-instruction = "3.0.0"
solana-sdk = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-transaction-error = "3.0.0"
test-case = "3.3"

